--- a/Project.toml
+++ b/Project.toml
@@ -12,5 +12,7 @@ LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 Molecules = "5de6a177-b489-40a9-b2f4-524242b9b679"
-Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 SphericalHarmonics = "c489a379-e885-57ff-9236-bd896d33c250"
+
+[compat]
+Makie = "^0.15.3"
