--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 GaussianBasis = "9bb1a3dc-0d1c-467e-84f5-0c4ef701360a"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+MKL = "33e6dc65-8f57-5167-99aa-e5a354878fb2"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 Molecules = "5de6a177-b489-40a9-b2f4-524242b9b679"
 SphericalHarmonics = "c489a379-e885-57ff-9236-bd896d33c250"
